--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -8,6 +8,7 @@
     <string name="compression_level">Kompressionslevel</string>
     <string name="liberapay">Liberapay</string>
     <string name="no_password">Kein Passwort</string>
+    <string name="ok">OK</string>
     <string name="create_zip">ZIP-Archiv erstellen</string>
     <string name="encryption_method">Verschlüsselungsmethode</string>
     <string name="cancel">Abbrechen</string>
@@ -40,6 +41,7 @@
     <string name="copying_files_progress">Dateien werden kopiert: %1$d/%2$d</string>
     <string name="moving_files_progress">Dateien werden verschoben: %1$d/%2$d</string>
     <string name="internal_storage">Interner Speicher</string>
+    <string name="root">Root</string>
     <string name="directory_empty">Verzeichnis ist leer</string>
     <string name="paste">Einfügen</string>
     <string name="archive">Archiv</string>
@@ -85,6 +87,7 @@
     <string name="ascending">Aufsteigend</string>
     <string name="descending">Absteigend</string>
     <string name="sort_by">Sortieren nach</string>
+    <string name="name">Name</string>
     <string name="size">Größe</string>
     <string name="time_of_creation">Geändert</string>
     <string name="extension">Dateiendung</string>
@@ -113,22 +116,31 @@
     <string name="confirm_password">Passwort bestätigen</string>
     <string name="wrong_password">Falsches Passwort</string>
     <string name="file_already_exists">Datei existiert bereits</string>
-    <string name="invalid_value">Invalide Input</string>
+    <string name="invalid_value">Ungültige Eingabe</string>
     <string name="please_enter_value_between_0_and_22">Wert zwischen 0 und 22 eingeben</string>
-    <string name="archiving_started_in_background">Archivierung gestartet im Hintergrund</string>
+    <string name="archiving_started_in_background">Archiverstellung im Hintergrund gestartet</string>
     <string name="no_compression">Keine Kompression</string>
     <string name="remove">Entfernen</string>
-    <string name="preview_archive">Voransicht Archive</string>
+    <string name="preview_archive">Archivvorschau</string>
     <string name="add">Hinzufügen</string>
-    <string name="directory_selection_disabled">Ordner können nicht ausgewählt werden, wählen Sie die Dateien darin.</string>
-    <string name="select_file">Wählen Sie Datei..</string>
-    <string name="select_files">(%d)</string>
-    <string name="donate_desc">Wenn Sie ZipXtract nützlich finden, beachten Sie bitte seine Entwicklung zu unterstützen:</string>
+    <string name="directory_selection_disabled">Ordner können nicht ausgewählt werden, wähle die Dateien darin aus.</string>
+    <string name="select_file">Datei auswählen…</string>
+    <string name="select_files">Füge (%d) hinzu</string>
+    <string name="donate_desc">Wenn Du ZipXtract nützlich findest, überlege bitte, ob Du die Entwicklung unterstützen möchtest:</string>
     <string name="error_too_many_parts">Dies würde %1$d Teile generieren</string>
     <string name="select_archive_type_title">Archivtyp auswählen</string>
     <string name="add_folder_confirmation_title">Aktuellen Ordner hinzufügen?</string>
-    <string name="add_folder_confirmation_message">Möchten Sie den Ordner \'%1$s\' zum Archiv hinzufügen?</string>
-    <string name="split_parts_number_req">Erlauben Sie mehr als 100 geteilte Teile</string>
+    <string name="add_folder_confirmation_message">Den Ordner \'%1$s\' zum Archiv hinzufügen?</string>
+    <string name="split_parts_number_req">Mehr als 100 Teile zulassen</string>
     <string name="fast_search">Schnelle Suche</string>
-    <string name="fast_search_summary">Verwenden Sie Android-Medienindex für schnellere Suche</string>
+    <string name="fast_search_summary">Den Android-Medienindex für eine schnellere Suche nutzen</string>
+    <string name="file_list_is_fixed_for_this_operation">Die Dateiliste ist für diesen Vorgang festgelegt.</string>
+    <string name="archive_updated_successfully">Archiv erfolgreich aktualisiert</string>
+    <string name="error_no_file_information_provided">Fehler: Keine Dateiinformationen vorhanden.</string>
+    <string name="error_updating_archive">Fehler bei der Aktualisierung des Archivs</string>
+    <string name="error_opening_archive">Fehler beim Öffnen des Archivs: %1$s</string>
+    <string name="no_valid_files_found_to_archive">Keine gültigen Dateien für die Archiveerstellung gefunden.</string>
+    <string name="invalid_archive_type">Ungültiger Archivtyp</string>
+    <string name="updating_archive">Aktualisieren des Archivs…</string>
+    <string name="update_archive_service">Archiv aktualisieren</string>
 </resources>
