--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -16,6 +16,7 @@
 \nSi la sécurité fait partie de vos priorités, nous vous recommandons grandement d\'utiliser le chiffrement AES, malgré son processus de travail plus long.</string>
     <string name="liberapay">Liberapay</string>
     <string name="no_password">Pas de mot de passe</string>
+    <string name="ok">OK</string>
     <string name="cancel">Annuler</string>
     <string name="permission_denied">Permission refusée</string>
     <string name="zip_creation_failed">Erreur pendant la création du fichier ZIP</string>
@@ -36,8 +37,10 @@
     <string name="_ten">Valeur par défaut est 64kb</string>
     <string name="split_size_mb">Taille des parties de Zip</string>
     <string name="encryption_strength">Puissance de chiffrement</string>
+    <string name="root">Root</string>
     <string name="directory_empty">Le dossier est vide</string>
     <string name="paste">Coller</string>
+    <string name="home">Accueil</string>
     <string name="action_settings">Réglages</string>
     <string name="select_all">Tout Sélectionner</string>
     <string name="search">Recherche</string>
@@ -58,12 +61,13 @@
     <string name="grant_access">Accès aux subventions</string>
     <string name="storage_access_permission_text">Cette application nécessite l\'accès au stockage de votre appareil pour son fonctionnent. Veuillez lui accorder les autorisations nécessaires.</string>
     <string name="sd_card">Carte SD</string>
-    <string name="root_access">Accès aux racines</string>
+    <string name="root_access">Accès root</string>
     <string name="root_access_summary">Activer l\'accès au répertoire racine</string>
     <string name="internal_storage">Stockage interne</string>
     <string name="storage">Stockage</string>
+    <string name="archive">Archive</string>
     <string name="show_hide_selected_files">Afficher/Masquer la sélection de fichiers</string>
-    <string name="background">Historique</string>
+    <string name="background">Arrière-plan</string>
     <string name="open_with">Ouvrir avec</string>
     <string name="compress_with">Compresser avec :</string>
     <string name="confirm_delete">Confirmer la suppression</string>
@@ -78,17 +82,20 @@
     <string name="info_tip">Conseil utile</string>
     <string name="privacy_policy">Politique de confidentialité</string>
     <string name="info_tip_description">● Effectuez un appui long sur les fichiers et dossiers ou cliquez sur les icônes fichier/dossier pour les sélectionner pour l\'archivage.\n\n● Cliquez sur un fichier pour afficher le menu d\'extraction pour choisir les options d\'extraction.\n\n● Les fichiers extraits à l\'aide du menu « Ouvrir avec » de l\'OS sont stockés dans Stockage Interne/ZipXtract par défaut. Vous pouvez modifiez cela dans les paramètres de l\'application.\n\n● L\'emplacement par défaut pour l\'archivage ou l\'extraction des archives (dans l\'application) est le répertoire parent du ou des fichiers respectifs. Vous pouvez modifiez cela dans les paramètres de l\'application.</string>
+    <string name="crash_log">Crash Log</string>
     <string name="move">Déplacer vers</string>
     <string name="copy_to">Copier vers</string>
     <string name="sort_by">Trier par</string>
     <string name="name">Nom</string>
     <string name="size">Taille</string>
     <string name="time_of_creation">Modifié</string>
+    <string name="extension">Extension</string>
     <string name="close">Fermer</string>
     <string name="extract_path">Dossier de fichiers extraits</string>
     <string name="archive_path">Dossier de fichiers archivés</string>
     <string name="archive_path_summary">Modifier le dossier d\'extraction par défaut.\nLa valeur par défaut est \"dossier parent\"</string>
     <string name="extract_path_summary">Modifier le dossier d\'extraction par défaut.\nPar défaut, il s\'agit d\'un « dossier parent » ou d\'un stockage interne/ZipXtract (pour le menu « Ouvrir avec » des archives extraites)</string>
+    <string name="compress_tar">Archive TAR</string>
     <string name="compression_success">Compression réussie</string>
     <string name="archive_success">Fichier archivé avec succès</string>
     <string name="tar_creation_success">Fichier TAR archivé avec succès</string>
@@ -108,9 +115,36 @@
     <string name="delete_files_notification_name">Supprimer le fichier</string>
     <string name="copy_move_files_notification_name">Fichiers Copie/Move</string>
     <string name="extract_archive_notification_name">Extrait Archive</string>
+    <string name="compress_archive_notification_name">Compress Archive</string>
     <string name="file_already_exists">Le fichier existe déjà</string>
     <string name="confirm_password">Confirmer mot de passe</string>
     <string name="passwords_do_not_match">Mot de passe ne correspond pas</string>
     <string name="wrong_password">Mot de passe faux</string>
-    <string name="error_too_many_parts">Le découpage générerait %1$d parties</string>
+    <string name="invalid_value">Entrée non valide</string>
+    <string name="please_enter_value_between_0_and_22">Entrez une valeur entre 0 et 22</string>
+    <string name="archiving_started_in_background">Archivage a commencé en arrière-plan</string>
+    <string name="no_compression">Pas de compression</string>
+    <string name="remove">Supprimer</string>
+    <string name="preview_archive">Prévisualiser l\'archive</string>
+    <string name="add">Ajouter</string>
+    <string name="directory_selection_disabled">Le dossier ne peut pas être sélectionné, sélectionnez les fichiers à l\'intérieur.</string>
+    <string name="select_file">Sélectionnez Fichier…</string>
+    <string name="select_files">Ajouter (%d)</string>
+    <string name="donate_desc">Si vous trouvez ZipXtract utile, veuillez envisager de soutenir son développement :</string>
+    <string name="error_too_many_parts">Cela générerait des pièces %1$d</string>
+    <string name="select_archive_type_title">Sélectionnez le type d\'archive</string>
+    <string name="add_folder_confirmation_title">Ajouter le dossier actuel ?</string>
+    <string name="add_folder_confirmation_message">Voulez-vous ajouter le dossier \'%1$s\' à l\'archive?</string>
+    <string name="split_parts_number_req">Permettre plus de 100 pièces détachées</string>
+    <string name="fast_search">Recherche rapide</string>
+    <string name="fast_search_summary">Utilisez l\'index média d\'Android pour une recherche plus rapide</string>
+    <string name="file_list_is_fixed_for_this_operation">La liste des fichiers est fixée pour cette opération.</string>
+    <string name="archive_updated_successfully">Archive mise à jour avec succès</string>
+    <string name="error_no_file_information_provided">Erreur: Aucune information de fichier n\'a été fournie.</string>
+    <string name="error_updating_archive">Mise à jour des erreurs d\'archive</string>
+    <string name="error_opening_archive">Archive d\'ouverture d\'erreur : %1$s</string>
+    <string name="no_valid_files_found_to_archive">Aucun fichier valide trouvé dans l\'archive.</string>
+    <string name="invalid_archive_type">Type d\'archive invalide</string>
+    <string name="updating_archive">Mise à jour des archives..</string>
+    <string name="update_archive_service">Update Archive</string>
 </resources>
