--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,6 +5,7 @@
     <string name="encryption_method">Метод шифрования</string>
     <string name="compression_level">Уровень сжатия</string>
     <string name="compression_method">Способ сжатия</string>
+    <string name="ok">OK</string>
     <string name="enter_password">Введите пароль</string>
     <string name="zip_creation_success">Zip-архив успешно создан</string>
     <string name="zip_creation_failed">Ошибка при создании ZIP-архива</string>
@@ -42,6 +43,7 @@
     <string name="root_access">Root-доступ</string>
     <string name="root_access_summary">Включить доступ к root каталогу</string>
     <string name="internal_storage">Внутреннее хранилище</string>
+    <string name="root">Root</string>
     <string name="directory_empty">Папка пуста</string>
     <string name="paste">Вставить</string>
     <string name="storage">Накопитель</string>
@@ -104,8 +106,8 @@
     <string name="close">Закрыть</string>
     <string name="extract_path">Папка извлеченных файлов</string>
     <string name="archive_path">Папка с архивными файлами</string>
-    <string name="archive_path_summary">Изменить папку по умолчанию для архивных файлов.\n(По умолчанию используется текущая папка).</string>
-    <string name="extract_path_summary">Измените папку по умолчанию для извлеченных файлов.\nПо умолчанию - текущая папка или \"/Internal Storage/ZipXtract\" (если файлы были извлечены через меню \"Открыть в\")</string>
+    <string name="archive_path_summary">Изменить папку по умолчанию для извлечения.\n(По умолчанию это «родительская» папка уровнем выше)</string>
+    <string name="extract_path_summary">Смена папки по умолчанию для извлечённых файлов.\nПо умолчанию это «родительская» папка выше или внутреннее хранилище ZipXtract (если файлы были извлечены через меню «Открыть в ZipXtract»)</string>
     <string name="compress_tar">Сжать в TAR-архив</string>
     <string name="compression_success">Сжатие успешно</string>
     <string name="archive_success">Архив успешно создан</string>
@@ -115,7 +117,7 @@
     <string name="tar_creation_failed">Ошибка при создании TAR-архива</string>
     <string name="compression_failed">Не удалось сжать</string>
     <string name="confirm_password">Подтвердить пароль</string>
-    <string name="passwords_do_not_match">Пароль не совпадает</string>
+    <string name="passwords_do_not_match">Пароли не совпадают</string>
     <string name="wrong_password">Неверный пароль</string>
     <string name="file_already_exists">Файл уже существует</string>
     <string name="invalid_value">Неправильный ввод</string>
@@ -123,17 +125,26 @@
     <string name="archiving_started_in_background">Архивирование началось в фоне</string>
     <string name="no_compression">Без сжатия</string>
     <string name="remove">Удалить</string>
-    <string name="preview_archive">Архив предварительного просмотра</string>
+    <string name="preview_archive">Предсмотр архива</string>
     <string name="add">Добавить</string>
     <string name="directory_selection_disabled">Папка не может быть выбрана, выберите файлы внутри нее.</string>
-    <string name="select_file">Выберите файл..</string>
-    <string name="select_files">Добавить (%d</string>
-    <string name="donate_desc">Если вы считаете ZipXtract полезным, пожалуйста, подумайте о поддержке его разработки:</string>
-    <string name="error_too_many_parts">Это будет генерировать %1$d части</string>
-    <string name="select_archive_type_title">Тип архива</string>
+    <string name="select_file">Выберите файл…</string>
+    <string name="select_files">Добавить (%d)</string>
+    <string name="donate_desc">Если вы считаете ZipXtract полезным, пожалуйста, поддержите его разработчиков:</string>
+    <string name="error_too_many_parts">Это сделает %1$d частей</string>
+    <string name="select_archive_type_title">Выберите тип архива</string>
     <string name="add_folder_confirmation_title">Добавить текущую папку?</string>
-    <string name="add_folder_confirmation_message">Вы хотите добавить папку \"%1$s\" в архив?</string>
-    <string name="split_parts_number_req">Разрешить более 100 частей</string>
+    <string name="add_folder_confirmation_message">Вы хотите добавить папку «%1$s» в этот архив?</string>
+    <string name="split_parts_number_req">Позволить разделение на более 100 частей</string>
     <string name="fast_search">Быстрый поиск</string>
-    <string name="fast_search_summary">Используйте медиа-индекс Android для более быстрого поиска</string>
+    <string name="fast_search_summary">Использовать медиа-индекс Android для более быстрого поиска</string>
+    <string name="file_list_is_fixed_for_this_operation">Список файлов фиксирован для этой операции.</string>
+    <string name="archive_updated_successfully">Архив успешно обновлён</string>
+    <string name="error_no_file_information_provided">Ошибка: информация о файле не представлена.</string>
+    <string name="error_updating_archive">Ошибка обновления архива</string>
+    <string name="error_opening_archive">Ошибка при открытии архива: %1$s</string>
+    <string name="no_valid_files_found_to_archive">Файлы для архивирования не найдены.</string>
+    <string name="invalid_archive_type">Неправильный тип архива</string>
+    <string name="updating_archive">Обновление архива…</string>
+    <string name="update_archive_service">Архив обновлений</string>
 </resources>
